--- a/index.html
+++ b/index.html
@@ -45,20 +45,16 @@
         </div>
         <div id="video-grid">
             <div class="video-item" data-category="short">
-                <video src="short Form/YT Shorts 1920x1080 Content.mp4" controls></video>
+                <video src="short Form/Iman Gadhzi Tryout.mp4" controls></video>
                 <p>Short-form Video 1</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="short Form/0510_1.mp4" controls></video>
+                <video src="short Form/YT Shorts 1920x1080 Content.mp4" controls></video>
                 <p>Short-form Video 2</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="short Form/Comp 1_6_2.mp4" controls></video>
+                <video src="short Form/0510_1.mp4" controls></video>
                 <p>Short-form Video 3</p>
-            </div>
-            <div class="video-item" data-category="short">
-                <video src="short Form/Final result 02.mp4" controls></video>
-                <p>Short-form Video 4</p>
             </div>
             <div class="video-item" data-category="gaming">
                 <video src="Gaming Video/Gaming Edited YT Video.mp4" controls></video>
@@ -69,16 +65,12 @@
                 <p>Long-form Video 1</p>
             </div>
             <div class="video-item" data-category="long">
-                <video src="Long Video/TRIAL SAMPLE .mp4" controls></video>
+                <video src="Long Video/Ruhi Ohama Before VS After.mp4" controls></video>
                 <p>Long-form Video 2</p>
             </div>
             <div class="video-item" data-category="long">
-                <video src="Long Video/Ruhi Ohama Before VS After.mp4" controls></video>
+                <video src="Long Video/Ruri Ohama Re-edited.mp4" controls></video>
                 <p>Long-form Video 3</p>
-            </div>
-            <div class="video-item" data-category="long">
-                <video src="Long Video/Long Video Youtube Format_.mp4" controls></video>
-                <p>Long-form Video 4</p>
             </div>
             <div class="video-item" data-category="football">
                 <video src="Football Edits/Ronaldo vs messi.mp4" controls></video>
@@ -101,7 +93,7 @@
                 <p>eCommerce Ads 3</p>
             </div>
             <div class="video-item" data-category="documentary">
-                <video src="Documentary Style/Mohak Mangal Documnetary Style 2.mp4" controls></video>
+                <video src="Documentary Style/Mohak Mangal Documentry Style.mp4" controls></video>
                 <p>Documentary Style videos 1</p>
             </div>
             <div class="video-item" data-category="documentary">
@@ -115,10 +107,6 @@
             <div class="video-item" data-category="anime">
                 <video src="Anime Long Form/Comp 1_1.mp4" controls></video>
                 <p>Anime Video 1</p>
-            </div>
-            <div class="video-item" data-category="anime">
-                <video src="Anime Long Form/Comp 1_2-2x-RIFE-RIFE4.0-47.95205fps_1.mp4" controls></video>
-                <p>Anime Video 2</p>
             </div>
             <div class="video-item" data-category="ads">
                 <video src="ADs/Coca Cola Landing Page AD.mp4" controls></video>
