--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="hero">
         <h1>Welcome to Editkaro.in</h1>
-        <p>Your trusted partner for professional video editing and social media marketing.</p>
+        <p>Trusted partner for professional video editing and social media marketing.</p>
         <a href="#portfolio" class="explore-button">Explore Our Work</a>
     </section>
 
@@ -45,19 +45,19 @@
         </div>
         <div id="video-grid">
             <div class="video-item" data-category="short">
-                <video src="short Form/Iman Gadhzi Tryout.mp4" controls></video>
+                <video src="Short/Iman Gadhzi Tryout.mp4" controls></video>
                 <p>Short-form Video 1</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="short Form/YT Shorts 1920x1080 Content.mp4" controls></video>
+                <video src="https://github.com/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/YT Shorts 1920x1080 Content.mp4" controls></video>
                 <p>Short-form Video 2</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="short Form/0510_1.mp4" controls></video>
+                <video src="Short/0510_1.mp4" controls></video>
                 <p>Short-form Video 3</p>
             </div>
             <div class="video-item" data-category="gaming">
-                <video src="Gaming Video/Gaming Edited YT Video.mp4" controls></video>
+                <video src="https://drive.google.com/file/d/13YxW_9aOEQVwZckVR8LZRPK6xAWsxUYe/view?usp=drive_link" controls></video>
                 <p>Gaming Video 1</p>
             </div>
             <div class="video-item" data-category="long">
@@ -121,7 +121,7 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>If you have any questions or would like to work with us, feel free to reach out using the form below.</p>
+        <p>Please reach out to us for any queries.</p>
         <form>
             <div class="form-group">
                 <input type="text" placeholder="Your Name" required>
@@ -140,7 +140,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <h3>Editkaro.in</h3>
-                <p>Your go-to agency for professional video editing and social media marketing.</p>
+                <p>professional video editing and social media marketing agency.</p>
             </div>
             <div class="footer-links">
                 <h4>Quick Links</h4>
