--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>Short-form Video 2</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="Short/0510_1.mp4" controls></video>
+                <video src="https://github.com/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/0510_1.mp4" controls></video>
                 <p>Short-form Video 3</p>
             </div>
             <div class="video-item" data-category="gaming">
