--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <p>Short-form Video 1</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="https://github.com/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/YT Shorts 1920x1080 Content.mp4" controls></video>
+                <video src="https://media.githubusercontent.com/media/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/YT Shorts 1920x1080 Content.mp4" controls></video>
                 <p>Short-form Video 2</p>
             </div>
             <div class="video-item" data-category="short">
-                <video src="https://github.com/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/0510_1.mp4" controls></video>
+                <video src="https://media.githubusercontent.com/media/neerajanagolu/editkaro_portfolio_voc/blob/main/Short/0510_1.mp4" controls></video>
                 <p>Short-form Video 3</p>
             </div>
             <div class="video-item" data-category="gaming">
