--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <section id="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <div class="filter-buttons">
-            <button onclick="filterVideos('all')" class="filter-button active">All</button>
-            <button onclick="filterVideos('short')" class="filter-button">Short-form Videos</button>
-            <button onclick="filterVideos('gaming')" class="filter-button">Gaming Videos</button>
-            <button onclick="filterVideos('long')" class="filter-button">Long-form Videos</button>
-            <button onclick="filterVideos('football')" class="filter-button">Football Edits</button>
-            <button onclick="filterVideos('ecommerceads')" class="filter-button">eCommerce Ads</button>
-            <button onclick="filterVideos('documentary')" class="filter-button">Documentary Style</button>
-            <button onclick="filterVideos('colorgrading')" class="filter-button">Color Grading</button>
-            <button onclick="filterVideos('anime')" class="filter-button">ANime Videos</button>
-            <button onclick="filterVideos('ads')" class="filter-button">Ads</button>
+            <button onclick="filterVideos('all')" class="filter-button active" data-category="all">All</button>
+            <button onclick="filterVideos('short')" class="filter-button" data-category="short">Short-form Videos</button>
+            <button onclick="filterVideos('gaming')" class="filter-button" data-category="gaming">Gaming Videos</button>
+            <button onclick="filterVideos('long')" class="filter-button" data-category="long">Long-form Videos</button>
+            <button onclick="filterVideos('football')" class="filter-button" data-category="football">Football Edits</button>
+            <button onclick="filterVideos('ecommerceads')" class="filter-button" data-category="ecommerceads">eCommerce Ads</button>
+            <button onclick="filterVideos('documentary')" class="filter-button" data-category="documentary">Documentary Style</button>
+            <button onclick="filterVideos('colorgrading')" class="filter-button" data-category="colorgrading">Color Grading</button>
+            <button onclick="filterVideos('anime')" class="filter-button" data-category="anime">Anime Videos</button>
+            <button onclick="filterVideos('ads')" class="filter-button" data-category="ads">Ads</button>
         </div>
         <div id="video-grid">
             <div class="video-item" data-category="short">
